--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -647,6 +647,7 @@
 
         <div class="animation-controls">
             <label><input type="checkbox" id="skipAnimationCheckbox"> Убрать анимацию шашек</label>
+            <label><input type="checkbox" id="hidePipsCheckbox"> Убрать отображение пипсов</label>
             <label>Скорость анимации: <input type="range" id="animationSpeedSlider" min="0.1" max="2" step="0.1"
                     value="0.5"></label>
         </div>
@@ -718,7 +719,7 @@
                     playersInfoDiv.innerHTML = `Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
                     let crawfordVisibility = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? 'visible' : 'hidden';
                     console.log('currentGameNum:', currentGameNum, 'enable_crawford_game_number:', enable_crawford_game_number, 'crawfordVisibility:', crawfordVisibility);
-                    topBar.innerHTML = '<span id="crawfordLabel" style="visibility: ' + crawfordVisibility + ';">Кроуфорд</span>' + selectHtml + '<div class="right-group"><input type="checkbox" id="hideInfoCheckbox"><input type="checkbox" id="hidePipsCheckbox"><div id="black-pips" class="pips-above-board">0</div></div>';
+                    topBar.innerHTML = '<span id="crawfordLabel" style="visibility: ' + crawfordVisibility + ';">Кроуфорд</span>' + selectHtml + '<div class="right-group"><input type="checkbox" id="hideInfoCheckbox"><div id="black-pips" class="pips-above-board">0</div></div>';
 
                     const hideInfoCheckbox = document.getElementById('hideInfoCheckbox');
                     if (hideInfoCheckbox) {
